infra/k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: muhaki/moderation
          # resources:
          #   limits: 
          #     memory: 2G
          #     cpu: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
