infra/k8s/react-client.deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-client-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-client
  template:
    metadata:
      labels:
        app: react-client
    spec:
      containers:
        - name: react-client
          image: muhaki/react-client
          # resources:
          #   limits: 
          #     memory: 2G
          #     cpu: 2G
---
apiVersion: v1
kind: Service
metadata:
  name: react-client-service
spec:
  type: ClusterIP
  selector:
    app: react-client
  ports:
    - name: react-client
      protocol: TCP
      port: 3000
      targetPort: 3000
